--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-fastapi==0.100.0
-hypercorn==0.14.4
+beautifulsoup4==4.12.3
+fastapi==0.109.2
+imageio==2.34.0
+matplotlib==3.8.3
+numpy==1.26.4
+opencv_python==4.9.0.80
+opencv_python_headless==4.9.0.80
+Requests==2.31.0
