--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,7 +3,7 @@ easyocr==1.7.1
 fastapi==0.110.0
 imageio==2.34.0
 matplotlib==3.7.5
-numpy==1.24.4
+numpy~=1.26.4
 opencv_python_headless==4.9.0.80
 Requests==2.31.0
 SQLAlchemy==2.0.28
